feat: sse service , respository 생성